<resources>
    <string name="app_name">Cholaos El Original</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email address</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="submit">submit</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="inventarios">Inventarios</string>
    <string name="volver_al_menu">Volver al menu</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="entrada">Entrada</string>
    <string name="stock">Stock</string>
    <string name="vasos">Vasos</string>
    <string name="inv_f">Inv f</string>
    <string name="cholao">Cholao</string>
    <string name="maxicholao">MaxiCholao</string>
    <string name="lulada">Lulada</string>
    <string name="guanabada">Guanabada</string>
    <string name="raspao">Raspao</string>
    <string name="todo">TODO</string>
    <string name="logo">logo</string>
    <string name="guanabanada">Guanabanada</string>
    <string name="guardar">Guardar</string>
    <string name="total">Total</string>
    <string name="fecha">Fecha</string>>
    <string name="seleccione_la_fecha">Seleccione la fecha</string>
    <string name="continuar">Continuar</string>
    <string name="gp_soacha">GP Soacha</string>
    <string name="mercurio">Mercurio</string>
    <string name="altavista">Altavista</string>
    <string name="ensue_o">Ensueño</string>
    <string name="ensueno">ensueno</string>
    <string name="tunal">Tunal</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="ingrese_correo">Ingrese correo</string>
    <string name="contrase_a">contraseña</string>
    <string name="ingrese_contrase_a">Ingrese contraseña</string>
    <string name="Contrase_a">Contraseña</string>
    <string name="Continuar">Continuar</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="achoun">Achoun</string>
    <string name="img">img</string>
    <string name="guanabana">Guanabana</string>
    <string name="fruta">Fruta</string>
    <string name="maracuya">Maracuya</string>
    <string name="Guanabana">Guanabana</string>
    <string name="lulo">Lulo</string>
    <string name="banano">Banano</string>
    <string name="pi_a">Piña</string>
    <string name="otros">Otros</string>
    <string name="milo">Milo</string>
    <string name="mora">Mora</string>
    <string name="leche">Leche</string>
    <string name="servilletas">Servilletas</string>
    <string name="pitillos">Pitillos</string>
    <string name="cucharas">Cucharas</string>
    <string name="guantes">Guantes</string>
    <string name="tapabocas">Tapabocas</string>
    <string name="hielo">Hielo</string>
    <string name="nota">Nota</string>
    <string name="log_in">Log in</string>
    <string name="calcular">Calcular</string>
</resources>