<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/emptyscreen"
    tools:context=".SelectInventoryActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:clickable="false"
        android:focusable="false"
        android:fontFamily="sans-serif-black"
        android:hint="@string/seleccione_la_fecha"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edittext_date"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:id="@+id/radiobutton_GPSoacha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gp_soacha"/>

        <RadioButton
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:id="@+id/radiobutton_Mercurio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mercurio" />

        <RadioButton
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:id="@+id/radiobutton_Altavista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altavista" />

        <RadioButton
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:id="@+id/radiobutton_Ensueño"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ensue_o"/>

        <RadioButton
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:id="@+id/radiobutton_Tunal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tunal"/>

    </RadioGroup>



    <Button
        android:id="@+id/button_continue"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/continuar"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>