<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/secondscreen"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        app:cardBackgroundColor="#F0FAFB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp">

            <TextView

                android:id="@+id/text_signIn"
                android:layout_width="75dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/sign_in"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView

                android:id="@+id/text_email"
                android:layout_width="135dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/email_address"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.159"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_signIn" />

            <EditText

                android:id="@+id/editText_email"
                android:layout_width="242dp"
                android:layout_height="37dp"
                android:layout_margin="25dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:hint="@string/enter_email"
                android:inputType="textEmailSubject"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/text_email" />

            <TextView

                android:id="@+id/text_password"
                android:layout_width="135dp"
                android:layout_height="25dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.159"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_email" />

            <EditText

                android:id="@+id/editText_password"
                android:layout_width="242dp"
                android:layout_height="37dp"
                android:layout_margin="25dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.473"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_password" />

            <Button

                android:id="@+id/button_submit"
                android:layout_width="258dp"
                android:layout_height="40dp"
                android:layout_margin="15dp"
                android:backgroundTint="#2680EF"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:cornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.535"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_password" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

